plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'iGuard'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}
configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}
repositories {
	mavenCentral()
	google()
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'com.squareup.okhttp3:okhttp:4.9.1'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'mysql:mysql-connector-java:8.0.33'
	implementation 'org.jetbrains:annotations:24.0.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-security' // security
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.thymeleaf:thymeleaf-spring6'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.apache.commons:commons-csv:1.8'
	implementation 'com.opencsv:opencsv:5.7.1'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.google.firebase:firebase-admin:9.2.0'
	implementation 'com.google.firebase:firebase-messaging:23.0.0'
	implementation 'com.google.firebase:firebase-firestore:24.0.0'
	// querydsl
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'
}

tasks.named('test') {
	useJUnitPlatform()
}